# VelopraEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  UpdateCmakeLists.py  install_dependencies.ps1  setup.bat  setup.sh
application/: CMakeLists.txt
application/src/: main.cpp
core/: CmakeLists.txt
core/include/: VE_Core.h  VE_CoreAPI.h  VE_Event.h  VE_EventBus.h  VE_EventQueue.h  VE_EventSubscriber.h  VE_IEventSubscriber.h  VE_KeyboardEvent.h  VE_Layer.h  VE_LayerStack.h  VE_Logger.h  VE_LoggerMacros.h  VE_Math.h  VE_Memory.h  VE_MouseEvent.h  VE_Time.h  VE_Types.h  VE_Utility.h  VE_WindowEvent.h  pch.h
core/src/: VE_Core.cpp  VE_Event.cpp  VE_EventBus.cpp  VE_EventQueue.cpp  VE_KeyboardEvent.cpp  VE_Layer.cpp  VE_LayerStack.cpp  VE_Logger.cpp  VE_Math.cpp  VE_Memory.cpp  VE_MouseEvent.cpp  VE_Time.cpp  VE_Utility.cpp  VE_WindowEvent.cpp
editor/: CMakeLists.txt
editor/src/: main.cpp
example/: 2dFragment_shader.glsl  2dVertex_shader.glsl  fragment_shader.glsl  vertex_shader.glsl
framework/: CMakeLists.txt
framework/include/: VE_FrameworkAPI.h  VelopraEngineApplication.h
framework/src/: VelopraEngineApplication.cpp
game_logic/: CMakeLists.txt
game_logic/include/: VE_GameLogicAPI.h  VE_GameObject2D.h
game_logic/src/: VE_GameObject2D.cpp
input/: CmakeLists.txt
input/include/: InputEventGenerator.h  InputUpdateLayer.h  VE_Command.h  VE_InputAPI.h  VE_InputEventGenerator.h  VE_InputUpdateLayer.h  VE_inputTypes.h  inputTypes.h
input/src/: InputEventGenerator.cpp  VE_InputEventGenerator.cpp  VE_InputUpdateLayer.cpp
rendering/: CmakeLists.txt
rendering/include/: Camera.h  IMesh.h  IRenderer.h  ITexture.h  IVRenderer.h  IWindowSizeObserver.h  Mesh.h  Model.h  OpenGLRenderer.h  OpenGLTexture.h  RendererAPI.h  Shader.h  Transform.h  Utils.h  VE_ICamera.h  VE_IMesh.h  VE_IModel.h  VE_IRenderer.h  VE_ITexture.h  VE_ITransform.h  VE_IWindowSizeObserver.h  VE_OpenGLCamera.h  VE_OpenGLMesh.h  VE_OpenGLModel.h  VE_OpenGLRenderer.h  VE_OpenGLTexture.h  VE_OpenGLTransform.h  VE_OpenGlShader.h  VE_RenderTypes.h  VE_RenderUtils.h  VE_RendererAPI.h  VE_pch.h  pch.h
rendering/include/interfaces/: VE_ICamera.h  VE_IFollowableCamera.h  VE_IRenderer2D.h  VE_IShader.h  VE_ITexture.h  VE_ITextureLoader.h
rendering/include/opengl/: VE_OpenGLShader.h  VE_OpenGLTexture.h  VE_OpenGLTextureAtlas.h  VE_OpenGLTextureLoader.h  VE_OpenGLTransform.h
rendering/include/opengl/2d/: VE_OpenGL2DRenderer.h  VE_OpenGLOrthoCamera.h
rendering/include/opengl/3d/: VE_OpenGLCamera.h  VE_OpenGLMesh.h  VE_OpenGLModel.h  VE_OpenGLRenderer.h
rendering/src/: Camera.cpp  Mesh.cpp  Model.cpp  OpenGLRenderer.cpp  Shader.cpp  Transform.cpp  Utils.cpp  VE_OpenGLCamera.cpp  VE_OpenGLMesh.cpp  VE_OpenGLModel.cpp  VE_OpenGLRenderer.cpp  VE_OpenGLShader.cpp  VE_OpenGLTransform.cpp  VE_RenderUtils.cpp  VE_pch.cpp
rendering/src/opengl/: VE_OpenGLShader.cpp  VE_OpenGLTexture.cpp  VE_OpenGLTextureAtlas.cpp  VE_OpenGLTextureLoader.cpp  VE_OpenGLTransform.cpp
rendering/src/opengl/2d/: VE_OpenGL2DRenderer.cpp  VE_OpenGLOrthoCamera.cpp
rendering/src/opengl/3d/: VE_OpenGLCamera.cpp  VE_OpenGLMesh.cpp  VE_OpenGLModel.cpp  VE_OpenGLRenderer.cpp
sandbox/: CMakeLists.txt
sandbox/include/: SandboxApp.h
sandbox/src/: SandboxApp.cpp  SandboxMain.cpp
ui/: CMakeLists.txt
ui/include/: MainWindow.h  QtOpenGLWidget.h  UIApi.h  UIManager.h  VE_IRenderWidget.h  VE_MainWindow.h  VE_QtOpenGLWidget.h  VE_RenderTypes.h  VE_RenderWidgetFactory.h  VE_UIApi.h  VE_UIManager.h  VE_WindowManager.h  WindowManager.h
ui/src/: MainWindow.cpp  QtOpenGLWidget.cpp  UIManager.cpp  VE_MainWindow.cpp  VE_QtOpenGLWidget.cpp  VE_RenderWidgetFactory.cpp  VE_UIManager.cpp  VE_WindowManager.cpp  WindowManager.cpp
window_system/: CMakeLists.txt
window_system/include/: VE_GLFWWindow.h  VE_IWindow.h  VE_WindowAPI.h
window_system/src/: VE_GLFWWindow.cpp
